<resources>
    <string name="btn_crear_cuenta">Crear cuenta nueva</string>
    <string name="app_name">Alke Walet</string>
    <!-- Pantalla Bienvenida -->
    <string name="texto_bienvenida_login">El lugar mas seguro para tu dinero</string>
    <string name="txt_cuenta">Ya tiene cuenta?</string>
    <!-- Pantalla Login -->
    <string name="txt_login_bienvenida">Logea y empeza a tranferir!</string>
    <string name="lbl_email">Email</string>
    <string name="hint_email">Ingresar tu email</string>
    <string name="lbl_contasena">Contraseña</string>
    <string name="hint_contasena">Ingresar tu contraseña</string>
    <string name="olvidaste_contasena">Olvidaste tu contraseña?</string>
    <string name="btn_login">Login</string>
    <string name="txt_crear_cuenta">Crear una nueva cuenta</string>
</resources>